HEAD
    + Improved behavior of test retry/continue prompt
    + New anste-connect tool to easily SSH into deployed hosts
    + Avoid negative MAC address error
    + More logs when verbosity is on: test commands and threads wait
    + Bugfix: dist value in anste.conf is no longer ignored
    + Using readline when running stopping during tests and treat better
      the given input
    + New anste-clean command to destroy all network and machines
    + Copy additional files for web tests to allow use of packages in scripts
    + Added support for multiple formatters when writing test results
    + Allow to specify scenarios and tests in YAML in addition to XML
    + New 'web' test type similar to 'host' but receiving BASE_URL
      as environment variable, useful for selenium scripts
    + New 'host' type value allows to run tests in the host machine
    + Shutdown scenario if SIGTERM is received
    + Print selenium command for debug purposes in verbose mode
    + Lock virtual machine creation to avoid KVM concurrency problems
    + Added critical attribute to tests to make the entire suite fail
    + Delete qcow2 images after convert to raw
    + JUnit format compatible with jenkins (use name instead of classname)
0.8
    + Support for Ubuntu 11.10 as host system
    + Allow to change name of the communication interface (default: anste0)
    + Added support for lucid's ubuntu-vm-builder
    + Autodetect network range in dhcp router configuration
    + Set random network in pppoe router configuration
    + Set domain name servers in dhcp server configuration
    + Use netcat instead of hping for connectivity diagnosis
0.7
    + Added new router types with dhcp and pppoe
    + Added user-extensions and single-window settings for Selenium
    + Now -wait-fail option gives the opportunity of retry a test
    + Added new protocol and firefox-profile settings for Selenium
    + Added precondition attributes (var and eq) to <host> test elements